# CEFDecklink

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  DeckLinkDX11.sln  DeckLinkDX11.vcxproj  DeckLinkDX11.vcxproj.filters  LICENSE  README.md  README_ja.md  SelectBestAdapter_snippet.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  analyze_crash.bat  build.bat  build.sh  build_log.txt  build_log_ascii.txt  build_log_cmake.txt  build_log_cmake2.txt  cef_index.html  cmake_install.cmake  config.json  crash_analysis.txt  crash_analysis_160102.txt  crash_analysis_detailed.txt  crash_analysis_new.txt  crash_full_analysis.txt  crash_params.txt  data_processing_flow.md  file_list.txt  find_cef.py  git_diff.txt  git_status.txt  installer.iss  licensekey.json  pack.sh  setup_env.bat  sim_err.txt  (+3 more)
.cache/clangd/index/: CefManager.cpp.BCCD86CBFE2EBF92.idx  CefManager.h.6A97B0BCB3C6B86B.idx  CefRenderHandler.cpp.D9CE4FC859F436BD.idx  CefRenderHandler.h.3ECEE2AEA48F871B.idx  DeckLinkAPI.h.7B6C6A598770B437.idx  DeckLinkAPIConfiguration.h.8916F82CF1574B58.idx  DeckLinkAPIDeckControl.h.31AEAE8BC4F4AE18.idx  DeckLinkAPIDiscovery.h.8AE3EAF6548A1374.idx  DeckLinkAPIDispatch.cpp.4F0D57DE35717FCE.idx  DeckLinkAPIModes.h.FE8ECBEAD5DB5468.idx  DeckLinkAPIStreaming.h.CE95FF20AA1A21EB.idx  DeckLinkAPITypes.h.EB3F3B55076FE380.idx  DeckLinkDevice.cpp.E48ED815FDF6DD68.idx  DeckLinkDevice.h.EB2BC6349B85F766.idx  ShaderManager.cpp.48DB99D9374A0BB7.idx  ShaderManager.h.8C30D7C4135FC6C9.idx  accessibility_handler_cpptoc.cc.E4449F7CF00E717F.idx  accessibility_handler_cpptoc.h.1304465BE4340945.idx  app_cpptoc.cc.697130B378B88C4A.idx  app_cpptoc.h.4B2204C322F896C8.idx  audio_handler_cpptoc.cc.9E5120055AE3EE5C.idx  audio_handler_cpptoc.h.B77CD09848175B9F.idx  audio_output_unittest.cc.9B7F16B8619895AF.idx  auth_callback_ctocpp.cc.B01E4EE84C17711F.idx  auth_callback_ctocpp.h.727C6374C40A4ACD.idx  base_client_handler.cc.33B06B058AF731CC.idx  base_client_handler.h.B2E7BB169AA52511.idx  base_ref_counted_cpptoc.cc.394A2E638ABFC569.idx  base_ref_counted_cpptoc.h.3FD97D77159E9883.idx  base_scoped_cpptoc.cc.C9ACD334E0A87412.idx  base_scoped_cpptoc.h.EADDDE3AF5F3CDCB.idx  before_download_callback_ctocpp.cc.AB059F1743A11329.idx  before_download_callback_ctocpp.h.CB1138AF43639A62.idx  binary_transfer_test.cc.1724FB9A7D28A919.idx  binary_transfer_test.h.7B4AE36B036B41E5.idx  binary_value_ctocpp.cc.1F98323F316C3DC3.idx  binary_value_ctocpp.h.60E3B74480EBBDDD.idx  binary_value_utils.cc.F385A1B9E16150E2.idx  binary_value_utils.h.99AA4F6F6D441B85.idx  binding_test.cc.6D258953ADD9B57D.idx  (+872 more)
.github/workflows/: release.yml
CEFDecklink/: DeckLinkDX11.exp  chrome_100_percent.pak  chrome_200_percent.pak  config.json
CEFDecklink/cache/: Last Browser  Local State  Variations
CEFDecklink/cache/Default/: Account Web Data  BrowsingTopicsState  DIPS  DIPS-wal  Favicons  History  InterestGroups-wal  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state
CEFDecklink/cache/Default/DawnGraphiteCache/: data_1  index
CEFDecklink/cache/Default/DawnWebGPUCache/: data_1  index
CEFDecklink/cache/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  index
CEFDecklink/cache/GraphiteDawnCache/: data_1  index
CEFDecklink/cache/ShaderCache/: data_1  index
CEFDecklink/cache/component_crx_cache/: metadata.json
CEFDecklink/cache/extensions_crx_cache/: metadata.json
CEFDecklink/cache/segmentation_platform/: ukm_db
CEFDecklink/locales/: af.pak  am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  (+15 more)
CEFDecklink/shaders/: YUVConvert.hlsl
cef_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cef.sln  cmake_install.cmake
cef_build/libcef_dll_wrapper/: cmake_install.cmake  libcef_dll_wrapper.vcxproj  libcef_dll_wrapper.vcxproj.filters
cef_build/tests/cefclient/: cefclient.vcxproj  cefclient.vcxproj.filters  cmake_install.cmake
cef_build/tests/cefsimple/: cefsimple.vcxproj  cefsimple.vcxproj.filters  cmake_install.cmake
cef_build/tests/cefsimple_capi/: cefsimple_capi.vcxproj  cefsimple_capi.vcxproj.filters  cmake_install.cmake
cef_build/tests/ceftests/: ceftests.vcxproj  ceftests.vcxproj.filters  cmake_install.cmake
cef_build/tests/gtest/: cef_gtest.vcxproj  cef_gtest.vcxproj.filters  cmake_install.cmake
docs/: data_processing_flow.md  data_processing_flow_en.md  pipeline_simulator.html  pipeline_simulator_en.html
scratch/: cef_project_cmakelists.txt  minimal_cmakelists.txt
scripts/: analyze_crash.ps1  analyze_latest.bat  analyze_params.bat  find_cef.ps1  find_cef.py  generate_ico.ps1  generate_license.ps1  monitor.ps1  private_key.xml
src/: CefManager.cpp  CefManager.h  CefRenderHandler.cpp  CefRenderHandler.h  CrashHandler.cpp  DeckLinkDX11.rc  DeckLinkDevice.cpp  DeckLinkDevice.h  ShaderManager.cpp  ShaderManager.h  main.cpp  resource.h
src/cef/: CefManager.cpp  CefManager.h  CefRenderHandler.cpp  CefRenderHandler.h  process_helper_mac.cpp
src/cef/mac/: Info.plist.in  helper-Info.plist.in
src/core/: CrashHandler.cpp  CrashHandler.h  MacWindow.h  MacWindow.mm  main.cpp
src/decklink/: DeckLinkAPI.h  DeckLinkAPI_i.c  DeckLinkDevice.cpp  DeckLinkDevice.h
src/render/: ShaderManager.cpp  ShaderManager.h
src/render/shaders/: YUVConvert.hlsl
src/shaders/: YUVConvert.hlsl
vender/Blackmagic DeckLink SDK 15.3/Examples/: AncillaryCapture.cpp  AncillaryOutput.cpp  AutomaticModeDetection.cpp  DeckLinkIPExample.cpp  DeviceNotification.cpp  Examples.sln  Makefile  RP188VitcOutput.cpp  StatusMonitor.cpp  SynchronizedCapture.cpp  SynchronizedPlayback.cpp  com_ptr.h  platform.h
(+1644 files in other folders)
